Fix internationalization and UI improvements for barcode generator
- Replace all hard-coded Chinese text with proper translation keys
- Update translation namespace from 'converter' to 'barcode' across all files
- Fix dark mode support by replacing hard-coded colors with theme-aware classes
- Improve field selection UI by removing field type display
- Add consistent spacing between UI sections (Text Settings, Format-Specific Options)
- Organize layout with proper separators and collapsible panels
- Enhance user experience with proper loading states and error messages

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,79 +1,96 @@
 {
-  "converter": {
-    "loadingViews": "Loading views...",
-    "noViews": "No views available",
-    "viewDescription": "Select a view to filter data scope. Conversion will only be performed on records in the selected view",
-    "urlFieldDescription": "Select text fields that contain links. The plugin will scan these fields for URLs",
-    "loadingFields": "Loading fields...",
-    "noTextFields": "No text fields found. Please create text fields to store links",
-    "singleLineText": "Single Line Text",
-    "multipleLineText": "Multiple Line Text",
-    "urlsFound": "URLs found",
-    "selectedFields": "{count} fields selected",
-    "attachmentFieldDescription": "Select the field where converted attachments will be stored",
-    "selectAttachmentFieldPlaceholder": "Select an attachment field",
-    "noAttachmentFields": "No attachment fields available",
-    "createFieldHint": "You can create a new field to store attachments",
-    "selected": "Selected",
-    "selectedAttachmentFieldDescription": "Converted files will be uploaded to this field",
-    "tip": "Tip",
-    "fileSizeLimit": "File Size Limit",
-    "maxFileSize": "Maximum file size",
-    "concurrencySettings": "Concurrency Settings",
-    "concurrencyLimit": "Concurrent downloads",
-    "sequential": "Sequential",
-    "highConcurrency": "High concurrency",
-    "fileTypeSettings": "File Type Settings",
-    "allowAllFileTypes": "Allow all file types",
-    "allowAllFileTypesWarning": "Warning: Allowing all file types may pose security risks. Please ensure you trust the link sources",
-    "allowedFileTypes": "Allowed file types",
-    "imageFiles": "Image files",
-    "documentFiles": "Document files",
-    "mediaFiles": "Media files",
-    "archiveFiles": "Archive files",
-    "otherOptions": "Other Options",
-    "preserveOriginalLink": "Preserve original link",
-    "preserveOriginalLinkDescription": "Save the original URL as attachment comment",
-    "conversionSuccessDescription": "Successfully converted {successful} files, processed {total} links in total",
-    "conversionErrorDescription": "An error occurred during conversion. Please check network connection and permissions",
-    "scanningUrls": "Scanning URLs",
-    "downloadingFiles": "Downloading files",
-    "uploadingAttachments": "Uploading attachments",
-    "overallProgress": "Overall Progress",
-    "processed": "Processed",
-    "currentFileProgress": "Current file progress",
-    "conversionErrorHint": "Errors occurred during conversion. Processed files will be preserved",
+  "barcode": {
+    "basicSettings": "Basic Settings",
+    "appearancePreview": "Appearance & Preview",
+    "textSettings": "Text Settings",
+    "marginSettings": "Margin Settings",
+    "formatSpecific": "Specific Options",
+
+    "barcodeType": "Barcode Type",
+    "selectBarcodeType": "Select barcode type",
+    "fileFormat": "File Format",
+    "selectFileFormat": "Select file format",
+    "dataSourceField": "Data Source Field",
+    "selectDataSourceField": "Select data source field",
+    "noDataFieldsFound": "No data fields found",
+    "number": "Number",
+    "text": "Text",
+
+    "width": "Width",
+    "height": "Height",
+    "barcodeColor": "Barcode Color",
+    "backgroundColor": "Background Color",
+
+    "displayText": "Display Text",
+    "displayTextLabel": "Display text",
+    "leaveEmptyForBarcodeData": "Leave empty for barcode data",
+    "font": "Font",
+    "selectFont": "Select font",
+    "fontStyle": "Font Style",
+    "selectStyle": "Select style",
+    "default": "Default",
+    "bold": "Bold",
+    "italic": "Italic",
+    "boldItalic": "Bold Italic",
+    "textPosition": "Text Position",
+    "selectPosition": "Select position",
+    "top": "Top",
+    "bottom": "Bottom",
+    "textAlignment": "Text Alignment",
+    "selectAlignment": "Select alignment",
+    "leftAlign": "Left align",
+    "center": "Center",
+    "rightAlign": "Right align",
+    "fontSize": "Font Size",
+    "textMargin": "Text Margin",
+
+    "margin": "Margin",
+    "topMargin": "Top Margin",
+    "bottomMargin": "Bottom Margin",
+    "leftMargin": "Left Margin",
+    "rightMargin": "Right Margin",
+
+    "gs1128": "GS1-128",
+    "compactFormat": "Compact Format",
+
+    "preview": "Preview",
+    "resetAllSettings": "Reset All Settings",
+    "previewing": "Previewing...",
+    "previewText": "Preview Text",
+    "barcodePreview": "Barcode Preview",
+    "adjustSettingsToSeePreview": "Adjust settings to see preview",
+
+    "generationProgress": "Generation Progress",
+    "generating": "Generating...",
+    "generateBarcode": "Generate Barcode",
+
+    "previewFailed": "Preview Failed",
+    "previewGenerationFailed": "Preview Generation Failed",
+
     "selectView": "Select View",
     "selectViewPlaceholder": "Please select a view",
     "noViewsFound": "No views found",
-    "selectUrlField": "Select URL Field",
-    "selectFieldPlaceholder": "Please select a field",
-    "noTextFieldsFound": "No text fields found",
     "selectAttachmentField": "Select Attachment Field",
     "noAttachmentFieldsFound": "No attachment fields found",
-    "pleaseSelectFields": "Please select view, URL field and attachment field",
-    "converting": "Converting...",
-    "startConversion": "Start Conversion",
-    "conversionProgress": "Conversion Progress",
-    "progress": "Progress",
-    "successful": "Successful",
-    "failed": "Failed",
-    "processing": "Processing",
-    "countUnit": "",
+    "selectFieldPlaceholder": "Please select a field",
+
     "pluginInitializing": "Plugin Initializing",
     "gettingTableInfo": "Getting table information...",
     "loadingData": "Loading data...",
     "configIncomplete": "Configuration incomplete",
-    "selectViewUrlAndAttachmentFields": "Please select view, URL field and attachment field",
-    "tableIdUnavailable": "Table ID unavailable",
     "cannotGetTableInfo": "Cannot get table information",
+    "tableIdUnavailable": "Table ID unavailable",
     "noRecordsToProcess": "No records to process",
     "noRecordsInView": "No records in current view or table",
-    "conversionCompleted": "Conversion completed",
-    "foundLinksProcessed": "Found {total} links, successfully processed {success}",
-    "conversionFailed": "Conversion failed",
-    "errorDuringConversion": "An error occurred during conversion",
-    "createAttachmentField": "Create attachment field"
+    "conversionCompleted": "Generation completed",
+    "barcodesGenerated": "Generated {success} barcodes from {total} records",
+    "conversionFailed": "Generation failed",
+    "errorDuringConversion": "An error occurred during generation",
+    "progress": "Progress",
+    "successful": "Successful",
+    "failed": "Failed",
+    "processing": "Processing",
+    "countUnit": ""
   },
   "common": {
     "cancel": "Cancel",
