--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,79 +1,96 @@
 {
-  "converter": {
-    "loadingViews": "正在加载视图...",
-    "noViews": "没有可用视图",
-    "viewDescription": "选择视图以筛选数据范围，转换将只在选定视图的记录上进行",
-    "urlFieldDescription": "选择包含链接的文本字段，插件将扫描这些字段中的URL",
-    "loadingFields": "正在加载字段...",
-    "noTextFields": "未找到文本字段，请先创建文本字段来存储链接",
-    "singleLineText": "单行文本",
-    "multipleLineText": "多行文本",
-    "urlsFound": "个链接",
-    "selectedFields": "已选择 {count} 个字段",
-    "attachmentFieldDescription": "选择用于存储转换后附件的字段",
-    "selectAttachmentFieldPlaceholder": "请选择附件字段",
-    "noAttachmentFields": "没有附件字段",
-    "createFieldHint": "您可以创建新字段来存储附件",
-    "selected": "已选择",
-    "selectedAttachmentFieldDescription": "转换后的文件将上传到此字段",
-    "tip": "提示",
-    "fileSizeLimit": "文件大小限制",
-    "maxFileSize": "最大文件大小",
-    "concurrencySettings": "并发设置",
-    "concurrencyLimit": "并发下载数",
-    "sequential": "顺序下载",
-    "highConcurrency": "高并发",
-    "fileTypeSettings": "文件类型设置",
-    "allowAllFileTypes": "允许所有文件类型",
-    "allowAllFileTypesWarning": "警告：允许所有文件类型可能存在安全风险，请确保您信任链接来源",
-    "allowedFileTypes": "允许的文件类型",
-    "imageFiles": "图片文件",
-    "documentFiles": "文档文件",
-    "mediaFiles": "音视频文件",
-    "archiveFiles": "压缩包文件",
-    "otherOptions": "其他选项",
-    "preserveOriginalLink": "保留原始链接",
-    "preserveOriginalLinkDescription": "将原始URL保存为附件的备注信息",
-    "conversionSuccessDescription": "成功转换 {successful} 个文件，总共处理 {total} 个链接",
-    "conversionErrorDescription": "转换过程中发生错误，请检查网络连接和权限设置",
-    "scanningUrls": "正在扫描URL",
-    "downloadingFiles": "正在下载文件",
-    "uploadingAttachments": "正在上传附件",
-    "overallProgress": "总体进度",
-    "processed": "已处理",
-    "currentFileProgress": "当前文件进度",
-    "conversionErrorHint": "转换过程中遇到错误，已处理的文件将保留",
+  "barcode": {
+    "basicSettings": "基本设置",
+    "appearancePreview": "外观与预览",
+    "textSettings": "文字设置",
+    "marginSettings": "边距设置",
+    "formatSpecific": "特定选项",
+
+    "barcodeType": "条形码类型",
+    "selectBarcodeType": "选择条形码类型",
+    "fileFormat": "文件格式",
+    "selectFileFormat": "选择文件格式",
+    "dataSourceField": "数据源字段",
+    "selectDataSourceField": "选择数据源字段",
+    "noDataFieldsFound": "未找到数据字段",
+    "number": "数字",
+    "text": "文本",
+
+    "width": "宽度",
+    "height": "高度",
+    "barcodeColor": "条形码颜色",
+    "backgroundColor": "背景色",
+
+    "displayText": "显示文字",
+    "displayTextLabel": "显示文字",
+    "leaveEmptyForBarcodeData": "留空为条形码数据",
+    "font": "字体",
+    "selectFont": "选择字体",
+    "fontStyle": "字体样式",
+    "selectStyle": "选择样式",
+    "default": "默认",
+    "bold": "粗体",
+    "italic": "斜体",
+    "boldItalic": "粗斜体",
+    "textPosition": "文本位置",
+    "selectPosition": "选择位置",
+    "top": "上方",
+    "bottom": "下方",
+    "textAlignment": "文本对齐",
+    "selectAlignment": "选择对齐",
+    "leftAlign": "左对齐",
+    "center": "居中",
+    "rightAlign": "右对齐",
+    "fontSize": "字体大小",
+    "textMargin": "文本边距",
+
+    "margin": "边距",
+    "topMargin": "上边距",
+    "bottomMargin": "下边距",
+    "leftMargin": "左边距",
+    "rightMargin": "右边距",
+
+    "gs1128": "GS1-128",
+    "compactFormat": "紧凑格式",
+
+    "preview": "预览",
+    "resetAllSettings": "重置所有设置",
+    "previewing": "预览中...",
+    "previewText": "预览文本",
+    "barcodePreview": "条形码预览",
+    "adjustSettingsToSeePreview": "调整设置查看预览",
+
+    "generationProgress": "生成进度",
+    "generating": "生成中...",
+    "generateBarcode": "生成条形码",
+
+    "previewFailed": "预览失败",
+    "previewGenerationFailed": "预览生成失败",
+
     "selectView": "选择视图",
     "selectViewPlaceholder": "请选择视图",
     "noViewsFound": "未找到视图",
-    "selectUrlField": "选择 URL字段",
-    "selectFieldPlaceholder": "请选择字段",
-    "noTextFieldsFound": "未找到文本字段",
     "selectAttachmentField": "选择附件字段",
     "noAttachmentFieldsFound": "未找到附件字段",
-    "pleaseSelectFields": "请先选择视图、URL字段和附件字段",
-    "converting": "转换中...",
-    "startConversion": "开始转换",
-    "conversionProgress": "转换进度",
-    "progress": "进度",
-    "successful": "成功",
-    "failed": "失败",
-    "processing": "处理中",
-    "countUnit": "个",
+    "selectFieldPlaceholder": "请选择字段",
+
     "pluginInitializing": "插件初始化中",
     "gettingTableInfo": "正在获取表格信息...",
     "loadingData": "加载数据中...",
     "configIncomplete": "配置不完整",
-    "selectViewUrlAndAttachmentFields": "请选择视图、URL字段和附件字段",
-    "tableIdUnavailable": "表格ID不可用",
     "cannotGetTableInfo": "无法获取表格信息",
+    "tableIdUnavailable": "表格ID不可用",
     "noRecordsToProcess": "没有可处理的记录",
     "noRecordsInView": "当前视图或表格中没有记录",
-    "conversionCompleted": "转换完成",
-    "foundLinksProcessed": "发现 {total} 个链接，成功处理 {success} 个",
-    "conversionFailed": "转换失败",
-    "errorDuringConversion": "转换过程中发生错误",
-    "createAttachmentField": "创建附件字段"
+    "conversionCompleted": "生成完成",
+    "barcodesGenerated": "从 {total} 条记录成功生成 {success} 个条形码",
+    "conversionFailed": "生成失败",
+    "errorDuringConversion": "生成过程中发生错误",
+    "progress": "进度",
+    "successful": "成功",
+    "failed": "失败",
+    "processing": "处理中",
+    "countUnit": "个"
   },
   "common": {
     "cancel": "取消",
