feat: 优化QR码功能和UI改进
- 移除toast通知功能，简化错误处理
- 优化进度显示UI，使用卡片式布局和更好的视觉层次
- QR码默认格式改为PNG
- 错误纠正级别默认值改为H（高），并标注推荐
- 简化错误纠正级别选项显示，只显示百分比
- 更新Tab标签为国际化方式
- QR码预览数据改为teable.ai

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,7 @@
     "formatSpecific": "Specific Options",
 
     "barcodeType": "Barcode Type",
+    "barcodeTabLabel": "Barcode",
     "selectBarcodeType": "Select barcode type",
     "fileFormat": "File Format",
     "selectFileFormat": "Select file format",
@@ -96,6 +97,7 @@
     "qrcodeType": "QR Code",
     "errorCorrectionLevel": "Error Correction Level",
     "selectErrorCorrectionLevel": "Select error correction level",
+    "recommended": "Recommended",
     "size": "Size",
     "foregroundColor": "Foreground Color",
     "backgroundColor": "Background Color",
