--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -7,6 +7,7 @@
     "formatSpecific": "特定选项",
 
     "barcodeType": "条形码类型",
+    "barcodeTabLabel": "条形码",
     "selectBarcodeType": "选择条形码类型",
     "fileFormat": "文件格式",
     "selectFileFormat": "选择文件格式",
@@ -94,9 +95,10 @@
   },
   "qrcode": {
     "qrcodeType": "二维码",
-    "errorCorrectionLevel": "错误纠正级别",
-    "selectErrorCorrectionLevel": "选择错误纠正级别",
-    "size": "尺寸",
+    "errorCorrectionLevel": "纠错级别",
+    "selectErrorCorrectionLevel": "选择纠错级别",
+    "recommended": "推荐",
+    "size": "大小",
     "foregroundColor": "二维码颜色",
     "backgroundColor": "背景颜色",
     "generateQRCode": "生成二维码"
