feat: implement QPS throttling and queue management for uploads
- Add upload queue with QPS limiting (6.7 requests/second)
- Implement per-upload fresh token authentication
- Add intelligent retry mechanism with exponential backoff
- Update progress calculation to track successful uploads only
- Replace concurrent uploads with queue-based processing
- Optimize QR and barcode conversion with stable token management
- Fix hardcoded Chinese text in QR code preview
- Remove dead code and improve component reliability

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -57,7 +57,7 @@
     "preview": "Preview",
     "resetAllSettings": "Reset All Settings",
     "previewing": "Previewing...",
-    "previewText": "Preview Text",
+    "previewText": "Preview Data",
     "barcodePreview": "Barcode Preview",
     "adjustSettingsToSeePreview": "Adjust settings to see preview",
 
@@ -101,7 +101,10 @@
     "size": "Size",
     "foregroundColor": "Foreground Color",
     "backgroundColor": "Background Color",
-    "generateQRCode": "Generate QR Code"
+    "generateQRCode": "Generate QR Code",
+    "previewText": "Example QR Code",
+    "previewData": "Preview Data",
+    "generating": "Generating..."
   },
   "common": {
     "cancel": "Cancel",
