fix: update metadata and internationalize error components
- Update page titles from 'Todo List' and '自动排名' to 'Barcode & QR Code Generator'
- Refactor ErrorBoundary component to use functional components with hooks
- Remove hardcoded Chinese text and add proper i18n support
- Add error translations for both English and Chinese
- Clean up unused image files in image directory
- Maintain error handling functionality while improving code structure

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -110,5 +110,10 @@
     "cancel": "Cancel",
     "confirm": "Confirm",
     "attachmentField": "Attachment Field"
+  },
+  "errors": {
+    "errorOccurred": "An Error Occurred",
+    "errorMessage": "Sorry, the application encountered an unexpected error. Please try refreshing the page or contact technical support.",
+    "retry": "Retry"
   }
 }
